Release history for Dist-Zilla-App-Command-bakeini

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: -1 (suggests: +2 -1)

 [Documentation]
 - Add tips and tricks section indicating how to make bakeini-specific plugins.

0.001000 2014-06-03T02:49:50Z
 - First version.
