@@ -1,2 +1,5 @@
 0.001001
+ [Added / test requires]
+ - Dist::Zilla::App::Tester
+ - Test::Differences
 
