@@ -4,9 +4,13 @@ Release history for Dist-Zilla-App-Command-bakeini
  [Dependencies::Stats]
  - Dependencies changed since 0.001000, see misc/*.deps* for details
  - develop: -1 (suggests: +2 -1)
+ - test: +2
 
  [Documentation]
  - Add tips and tricks section indicating how to make bakeini-specific plugins.
+
+ [Tests]
+ - Added basic application test.
 
 0.001000 2014-06-03T02:49:50Z
  - First version.
